# wanikani_to_anki

./: .gitignore  README.md  app.py  pyproject.toml  wanikani.db
templates/: back.html  back_radical.html  front.html  front_other.html  meaning.css  meaning_and_reading.css  meaning_styling.css  meaning_styling_old.css  old.css  reading_old.css  styling.css
tests/: test_wanikani.py
wanikani_to_anki/: Card.py  ComponentStore.py  Dataclasses.py  Factory.py  FileStore.py  FlashcardDB.py  MyNote.py  db.py  flashcard.py  model.py
