[tool.poetry]
name = "wanikani"
version = "0.1.0"
description = ""
authors = ["Stephen Hilson <cemsity@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
genanki = "^0.13.0"
wanikani-api = "^0.5.1"
chardet = "^4.0.0"
peewee = "^3.14.8"
httpx = "^0.21.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
